[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.121.0",
    "pytest>=8.4.2",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]
[tool.uv.dev-dependencies]
ruff = "*"
mypy = "*"
